# pipeline

./: .gitignore  README.md  ao2atat.py  e2eopts.ipynb  end2end.py  run_ao2atat.py  run_db_extractor.py  run_e2e.py  test_e2e.ipynb
data_preprocessing/: CreateAstroObjectPKL.py  DBExtractor.py  SSL_dataset.ipynb  ZTF.code-workspace  ao2arrays.ipynb  ao2atat.ipynb  ao2atat.py  ao2atat_LCprocessing.ipynb  aos_ZTF18aacjwwd  batch_processing.code-workspace  clean_oids.py  compute_features_by_ao.py  create_h5.ipynb  data_cleaning.ipynb  data_mining.ipynb  data_preprocess.ipynb  download_samples_from_db_copy.py  h5_creation.ipynb  init_repo.sh  mine_oids.py  oid_data_mining.ipynb  par_compute_features_by_ao.py  requirements.txt  run_db_extractor.py  set_ft_md_to_prod.ipynb  test.ipynb  test.pkl  test_array.pkl  test_dataset.ipynb  test_features.parquet  test_py.py  utils.py  ztf_prod_keys.py
data_preprocessing/batch_processing/: ao2atat_LCprocessing (copy).ipynb
data_preprocessing/batch_processing/batch-processing/: pyproject.toml
data_preprocessing/batch_processing/batch-processing/batch_processing/pipeline/sorting_hat/: schema_avros.py  sorting_hat_spark.py
data_preprocessing/batch_processing/batch-processing/batch_processing/pipeline/xmatch/: xmatch_step_pyspark_refactor.py
data_preprocessing/batch_processing/batch-processing/scripts/emr/: run_batch_processing.py
pipeline/P4J/P4J/algorithms/: analysis_of_variance.c  multiharmonic_aov.c  mutual_information.c  string_length.c  (+2 more)
pipeline/lc_classifier/lc_classifier/: utils.py
pipeline/mhps/mhps/: mhps_wrapper.c
(+76 files in other folders)
