[tool.poetry]
name = "batch-processing"
version = "0.1.0"
description = ""
authors = ["ALeRCE"]
packages = [{include = "batch_processing"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10"
fastavro = "^1.9.3"
requests = "^2.31.0"
boto3 = "^1.34.53"
pyspark = "^3.5.1"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
polars = "^0.20.14"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
pymongo = "^4.6.2"
cramjam = "^2.8.3"

[tool.poetry.group.dev.dependencies]
performance-timer = {path = "libs/performance_timer", develop = false}
ruff = "^0.6"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
